--- a/index.html
+++ b/index.html
@@ -1,107 +1,301 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Birthday Card for Nisrine</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #ffeef5;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A Special Birthday Wish for Palestine!</title>
+    <!-- Tailwind CSS CDN for easy styling -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Custom styles for a Palestinian-inspired cute look */
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Pacifico&display=swap');
+        /* Pacifico for a touch of elegance, Inter for readability */
 
-    .card-container {
-      perspective: 1000px;
-    }
+        body {
+            font-family: 'Inter', sans-serif;
+            /* Gentler, radial gradient background with soft Palestinian-inspired colors */
+            background: radial-gradient(circle at center, #fdfde9 0%, #e0ffe7 30%, #c8f5d7 70%, #8bc34a 100%); /* Softer golden-white to light green */
+            background-size: 200% 200%; /* Make gradient larger for smoother animation */
+            animation: gradientAnimation 28s ease infinite alternate; /* Slower, oscillating gradient animation */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            padding: 20px;
+            box-sizing: border-box;
+            overflow-x: hidden;
+            overflow-y: auto; /* Allow vertical scrolling if content exceeds height */
+        }
 
-    .card {
-      width: 300px;
-      height: 400px;
-      position: relative;
-      transform-style: preserve-3d;
-      transition: transform 1s;
-      cursor: pointer;
-    }
+        @keyframes gradientAnimation {
+            0% { background-position: 0% 50%; }
+            100% { background-position: 100% 50%; }
+        }
 
-    .card.is-flipped {
-      transform: rotateY(180deg);
-    }
+        .card-container {
+            background-color: #ffffff;
+            /* Softer, more artistic shadow with a golden glow and green highlight */
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15), 0 0 40px rgba(139, 195, 74, 0.6), 0 0 60px rgba(255, 223, 0, 0.5);
+            border-radius: 30px; /* Even rounder corners for a cuter look */
+            overflow: hidden;
+            max-width: 700px; /* Slightly wider card for better spacing */
+            width: 100%;
+            text-align: center;
+            padding: 50px; /* Increased inner padding */
+            animation: fadeInScale 1s ease-out;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            /* Thinner, elegant green border with a golden accent */
+            border: 3px solid #8BC34A; /* Soft olive green border */
+            outline: 2px solid #FFD700; /* Gold outline */
+            outline-offset: -8px; /* Pull outline inside border */
+        }
 
-    .card-face {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      backface-visibility: hidden;
-      border-radius: 15px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-      box-sizing: border-box;
-    }
+        @keyframes fadeInScale {
+            from { opacity: 0; transform: translateY(-30px) scale(0.95); }
+            to { opacity: 1; transform: translateY(0) scale(1); }
+        }
 
-    .front {
-      background: linear-gradient(135deg, #f9c5d1, #fbc2eb);
-    }
+        .confetti {
+            position: absolute;
+            width: 8px; /* Slightly smaller confetti */
+            height: 8px;
+            border-radius: 50%;
+            opacity: 0;
+            animation: fall 3s infinite;
+            pointer-events: none;
+            z-index: 10;
+        }
 
-    .back {
-      background: #fff;
-      transform: rotateY(180deg);
-    }
+        @keyframes fall {
+            0% { transform: translateY(-10px) rotate(0deg); opacity: 1; }
+            100% { transform: translateY(100vh) rotate(720deg); opacity: 0; }
+        }
 
-    h1 {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
+        /* Styles for the "surprise" animation */
+        #heartAnimation {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            font-size: 5.5rem; /* Slightly larger heart */
+            color: #ef4444; /* Softer red for the heart */
+            opacity: 0;
+            transition: all 0.5s ease-out;
+            z-index: 60;
+        }
 
-    p {
-      font-size: 16px;
-      text-align: center;
-    }
+        #heartAnimation.show {
+            transform: translate(-50%, -50%) scale(1);
+            opacity: 1;
+            animation: pulse 1s infinite alternate;
+        }
 
-    .cake {
-      font-family: monospace;
-      white-space: pre;
-      font-size: 14px;
-      margin-top: 20px;
-    }
-  </style>
+        @keyframes pulse {
+            from { transform: translate(-50%, -50%) scale(1); }
+            to { transform: translate(-50%, -50%) scale(1.1); }
+        }
+
+        .pacifico-font {
+            font-family: 'Pacifico', cursive;
+        }
+
+        /* Custom animation for the button */
+        @keyframes bounce-slow {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-8px);
+            }
+        }
+        .animate-bounce-slow {
+            animation: bounce-slow 2s infinite ease-in-out;
+        }
+
+        /* Text shadow for main heading - soft and inviting */
+        .text-shadow-custom {
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Responsive adjustments for smaller screens */
+        @media (max-width: 768px) {
+            .card-container {
+                padding: 30px;
+                border: 2px solid #8BC34A;
+                outline-offset: -6px;
+            }
+            .text-5xl { font-size: 2.8rem; }
+            .text-3xl { font-size: 1.8rem; }
+            .text-xl { font-size: 1.1rem; }
+            .w-48 { width: 50vw; max-width: 180px; } /* Adjust image size for mobile */
+        }
+
+        @media (max-width: 480px) {
+            .card-container {
+                padding: 20px;
+            }
+            .text-5xl { font-size: 2.2rem; }
+            .text-3xl { font-size: 1.5rem; }
+            .text-xl { font-size: 0.9rem; }
+            .w-48 { width: 60vw; max-width: 160px; }
+        }
+    </style>
 </head>
-<body>
-  <div class="card-container" onclick="flipCard()">
-    <div class="card" id="birthdayCard">
-      <div class="card-face front">
-        <h1>🎉 Happy Birthday, Nisrine! 🎉</h1>
-        <p>     Today is all about YOU
-             your light, your laughter, your magic.
-                         Click me!</p>
-      </div>
-      <div class="card-face back">
-        <h1>🎂 Surprise, Nisrine! 🎂</h1>
-        <div class="cake">
-        <br>
-        🎉🎉🎉🎉🎉<br>
-       🎂  Happy   🎂<br>
-      🎈 Birthday! 🎈<br>
-     🎉  Nisrine!  🎉<br>
-        🎉🎉🎉🎉🎉
-        </div>
-        <p>May your day be filled with joy as sweet as this cake,<br>
-        and a year as bright as your smile. 💖</p>
-      </div>
-    </div>
-  </div>
+<body class="flex flex-col items-center justify-center min-h-screen bg-gray-50 p-4">
 
-  <script>
-    function flipCard() {
-      document.getElementById('birthdayCard').classList.toggle('is-flipped');
-    }
-  </script>
+    <!-- Confetti elements container -->
+    <div id="confetti-container" class="fixed inset-0 pointer-events-none z-0"></div>
+
+    <!-- Heart animation element -->
+    <div id="heartAnimation" class="hidden">❤️</div>
+
+    <div class="card-container relative w-full mx-auto p-8 md:p-12 lg:p-16 flex flex-col items-center">
+        <!-- New SVG featuring "Cherish" text with two hearts -->
+        <div class="w-48 h-auto md:w-64 lg:w-72 mb-8 flex items-center justify-center rounded-full border-4 border-gray-400 shadow-lg p-2 bg-white">
+            <svg class="w-full h-full" viewBox="0 0 200 150" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <!-- Soft, warm background circle -->
+                <circle cx="100" cy="75" r="70" fill="#FDFCF8"/> <!-- Very light cream background -->
+
+                <!-- Text "Cherish" - changed fill color to a soft rose red -->
+                <text x="100" y="85" font-family="Pacifico" font-size="45" fill="#E76F80" text-anchor="middle">
+                    Cherish
+                </text>
+
+                <!-- Heart 1 - adjusted fill color for more vibrancy -->
+                <path d="M70 50 C65 40, 50 45, 55 60 C60 75, 75 70, 70 50 Z" fill="#FF8C94" transform="scale(0.8) translate(5 5)" opacity="0.9"/>
+                <!-- Heart 2 - adjusted fill color for more vibrancy -->
+                <path d="M130 90 C125 80, 110 85, 115 100 C120 115, 135 110, 130 90 Z" fill="#FF8C94" transform="scale(0.8) translate(5 5)" opacity="0.9"/>
+            </svg>
+        </div>
+
+        <!-- Main Heading -->
+        <h1 class="text-5xl md:text-6xl lg:text-7xl font-extrabold text-red-700 mb-6 tracking-wide leading-tight pacifico-font text-shadow-custom">
+            Kul 'Am Wa Anti Bi Khair!
+        </h1>
+        <p class="text-xl md:text-2xl text-gray-800 mb-8 font-semibold">(Wishing You Well Every Year!)</p>
+
+        <!-- Subheading/Recipient Name -->
+        <p class="text-3xl md:text-4xl text-green-700 mb-8 font-semibold pacifico-font">
+            To the person with whome u shared ur cigaret,
+        </p>
+
+        <!-- Birthday Message -->
+        <p class="text-xl md:text-2xl text-gray-700 leading-relaxed mb-10 max-w-2xl px-4">
+            On this special day, may your spirit soar like the steadfast olive tree, rooted in strength and hope.
+            May your path be blessed with peace, joy, and the warmth of family.
+            Wishing you a year filled with prosperity, resilience, and moments that truly shine.
+            With every passing year, may your life be enriched with endless blessings.
+        </p>
+
+        <!-- Signature -->
+        <p class="text-2xl md:text-3xl font-bold text-black mt-8 pacifico-font">
+            With heartfelt blessings,
+        </p>
+        <p class="text-2xl md:text-3xl font-bold text-black pacifico-font">
+            nisrine
+        </p>
+
+        <!-- Optional: Add a simple button or interactive element -->
+        <button
+            id="surpriseButton"
+            class="mt-6 px-8 py-4 bg-gradient-to-r from-green-500 to-rose-500 text-white text-xl font-bold rounded-full shadow-lg hover:shadow-xl transform hover:scale-105 transition duration-300 ease-in-out focus:outline-none focus:ring-4 focus:ring-rose-300"
+        >
+            Discover a Message of Hope!
+        </button>
+
+        <!-- Message Box for "surprise" -->
+        <div id="messageBox" class="fixed inset-0 bg-gray-900 bg-opacity-60 flex items-center justify-center p-4 z-50 hidden">
+            <div class="bg-white p-8 rounded-2xl shadow-2xl text-center max-w-sm w-full relative transform scale-0 opacity-0 transition-all duration-300 ease-out">
+                <h3 class="text-3xl font-bold text-green-700 mb-4 pacifico-font">🕊️ Enduring Spirit! 🇵🇸</h3>
+                <p class="text-lg text-gray-700 mb-6">
+                    May your life be a testament to resilience and unwavering spirit,
+                    and may peace guide your way. Happy Birthday!
+                </p>
+                <button
+                    id="closeMessageBox"
+                    class="px-6 py-2 bg-rose-500 text-white font-semibold rounded-md hover:bg-rose-600 transition duration-200 shadow"
+                >
+                    much love!
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // JavaScript for confetti, surprise button, and message box
+        document.addEventListener('DOMContentLoaded', () => {
+            const surpriseButton = document.getElementById('surpriseButton');
+            const messageBox = document.getElementById('messageBox');
+            const closeMessageBox = document.getElementById('closeMessageBox');
+            const heartAnimation = document.getElementById('heartAnimation');
+            const confettiContainer = document.getElementById('confetti-container');
+
+            // Function to create and animate confetti
+            function createConfetti() {
+                // Palestinian flag colors: Black, White, Red, Green
+                const confettiColors = ['#000000', '#FFFFFF', '#FF0000', '#008000'];
+                for (let i = 0; i < 70; i++) { // Generate more confetti pieces
+                    const confetti = document.createElement('div');
+                    confetti.classList.add('confetti');
+                    confetti.style.left = Math.random() * 100 + 'vw';
+                    confetti.style.top = -10 + 'px'; // Start above the viewport
+                    confetti.style.animationDuration = Math.random() * 3 + 4 + 's'; // Longer duration (4-7s)
+                    confetti.style.animationDelay = Math.random() * 6 + 's'; // Longer delay
+                    confetti.style.backgroundColor = confettiColors[Math.floor(Math.random() * confettiColors.length)];
+                    confetti.style.opacity = Math.random() * 0.7 + 0.3; // More varied opacity
+                    confettiContainer.appendChild(confetti);
+
+                    confetti.addEventListener('animationend', () => {
+                        confetti.remove();
+                    });
+                }
+            }
+
+            // Show the message box and trigger animations
+            if (surpriseButton) {
+                surpriseButton.addEventListener('click', () => {
+                    if (messageBox) {
+                        messageBox.classList.remove('hidden');
+                        setTimeout(() => {
+                            messageBox.querySelector('div').classList.add('scale-100', 'opacity-100');
+                        }, 50);
+
+                        createConfetti();
+
+                        if (heartAnimation) {
+                            heartAnimation.classList.remove('hidden');
+                            setTimeout(() => {
+                                heartAnimation.classList.add('show');
+                            }, 100);
+                            setTimeout(() => {
+                                heartAnimation.classList.remove('show');
+                                heartAnimation.classList.add('hidden');
+                            }, 2000);
+                        }
+                    }
+                });
+            }
+
+            // Hide the message box
+            if (closeMessageBox) {
+                closeMessageBox.addEventListener('click', () => {
+                    if (messageBox) {
+                        messageBox.querySelector('div').classList.remove('scale-100', 'opacity-100');
+                        setTimeout(() => {
+                            messageBox.classList.add('hidden');
+                        }, 300);
+                    }
+                });
+            }
+
+            // Initial confetti on page load
+            createConfetti();
+        });
+    </script>
 </body>
 </html>
